<resources>
    <string name="app_name">Ejemplo2</string>
    <string name="action_settings">Settings</string>

    <string name="main_user">Usuario</string>
    <string name="main_pass">Contraseña</string>
    <string name="main_hint_user">Introduce DNI</string>
    <string name="main_hint_pass">Introduce password</string>
    <string name="main_button_login">Acceder</string>
    <string name="main_toast_no_network">No se encuentra conctado a nunguna red. Conectese a una red y vuelva a abrir la aplicación</string>
    <string name="main_toast_no_wifi">No se encuentra conectado a una red Wifi, se consumirán datos de su tarifa móvil</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu_greeting">Bienvenido</string>
    <string name="menu_leccion">Lección 1: Introducción a Android</string>
    <string name="menu_button_test">Nuevo test</string>
    <string name="menu_button_ejercicio">Nuevo ejercicio</string>
    <string name="menu_button_seguimiento">Seguimiento</string>

    <string name="title_activity_test">TestActivity</string>
    <string name="test_button_send">Enviar</string>
    <string name="test_button_advice">Consejo</string>

    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="exercise_button_file">Subir fichero</string>
    <string name="exercise_button_photo">Sacar foto</string>
    <string name="exercise_button_audio">Grabar audio</string>
    <string name="exercise_button_video">Grabar vídeo</string>
    <string name="exercise_toast_no_camara">Su dispositivo no dispone de cámara para realiar esta acción</string>
    <string name="exercise_toast_no_microphone">Su dispositivo no dispone de micrófono para realiar esta acción</string>
    <string name="exercise_toast_no_photo_service">No dispone de ninguna aplicación capaz de sacar fotos</string>
    <string name="exercise_toast_no_micro_service">No dispone de ninguna aplicación capaz de grabar audio</string>
    <string name="exercise_toast_error">Ha ocurrido un error</string>

    <string name="title_activity_followup">FollowupActivity</string>
    <string name="followup_label">Actividad de seguimiento</string>

    <string name="network_disconnected">Se ha desconectado de la red</string>
</resources>
